# dental-recall-agent

./: DENTAL_OFFICE_SETUP_GUIDE.md  LICENSE  README.md  SETUP.md  package-lock.json
crewai/: README.md  app.py  requirements.txt
crewai/dental_recall_crew/: README.md  pyproject.toml
crewai/dental_recall_crew/src/dental_recall_crew/: crew.py  main.py
crewai/dental_recall_crew/src/dental_recall_crew/config/: agents.yaml  tasks.yaml
crewai/dental_recall_crew/tests/: README.md  conftest.py  test_dental_scheduler.py  test_hipaa_compliance.py  test_integration.py  test_reminder_coordinator.py
crewai/routes/: ai.py  audit.py  scheduling.py
crewai/services/: recallshield_ai.py
frontend/: .devcontainer.json  README.cloudflare.md  README.md  next.config.ts  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
frontend/functions/api/: _jwt.ts  _middleware.ts  appointments.ts  auth.ts  offices.ts  patients.ts
frontend/src/app/: AIScheduler.tsx  AuthButtons.tsx  AuthProvider.tsx  DemoRequestModal.tsx  PatientsList.tsx  authConfig.ts  globals.css  layout.tsx  page.tsx  useAISchedule.ts  usePatients.ts
frontend/src/app/api/demo-request/: airtableConfig.ts  route.ts
recallshield/: package.json
scripts/: svg-to-ico.js
